--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <table cellspacing="20">
-      <td><img src="image/IMG_6057-modified.png" alt="priya pic 1"
+      <td><img src="IMG_6057-modified.png" alt="priya pic 1"
         width="200" height="200"></td>
       <td><h1>Priya Talan</h1>
         <p><i>MCA Student in <strong><a href="https://www.cdac.in/">C-DAC</a></strong> ❤ to paints.</i></p>
